ported my previous stylesheet over to the project

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <title>Great Idea - Responsive I</title>
-
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
@@ -12,5 +11,104 @@
 
 <body>
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+<div class="wrapper">
+  <header>
+    <div class="main-header">
+      <nav>
+        <a href="services.html">Services</a>
+        <a href="#">Product</a>
+        <a href="#">Vision</a>
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </nav>
+
+      <div class="logo">
+        <img src="img/logo.png" alt="Great Idea! Company logo.">
+      </div>
+
+    </div>
+
+    <div class="subheader">
+
+      <div class="prompt">
+        <h1>Innovation <br /> On <br /> Demand</h1>
+
+        <a href="#">Get Started</a>
+      </div>
+      <div class="banner">
+        <img src="img/header-img.png" alt="Image of a code snippet.">
+      </div>
+
+    </div>
+
+
+  </header>
+  <hr />
+
+  <div class="content">
+    <div class="section-1">
+      <div class="left">
+        <h3>Features</h3>
+        Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      </div>
+      <div class="right">
+        <h3>About</h3>
+        Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      </div>
+    </div>
+    <br />
+    <br />
+    <div class="section-2">
+      <div>
+        <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+      </div>
+    </div>
+    <br />
+    <br/>
+    <div class="section-3">
+      <div class="column-left">
+        <h3>
+          Services
+        </h3>
+        Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      </div>
+      <div class="column-center">
+        <h3>
+          Product
+        </h3>
+        Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      </div>
+      <div class="column-right">
+        <h3>Vision</h3>
+        Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      </div>
+    </div>
+  </div>
+  <br />
+
+  <hr />
+  <address>
+    <h3>
+      Contact
+    </h3>
+    123 Way 456 Street<br />
+    Somewhere, USA<br />
+    <br />
+    1 (888) 888-8888<br />
+    <br />
+    sales@greatidea.io <br />
+  </address>
+  <br />
+
+  <div class="copyright">
+    Copyright Great Idea! 2018
+  </div>
+</div>
 </body>
 </html>
