messed things up badly

--- a/index.html
+++ b/index.html
@@ -16,14 +16,17 @@
   <div class="wrapper">
     <header>
       <div class="main-header">
-        <nav>
-          <a href="services.html">Services</a>
-          <a href="#">Product</a>
-          <a href="#">Vision</a>
-          <a href="#">Features</a>
-          <a href="#">About</a>
-          <a href="#">Contact</a>
-        </nav>
+        <div class="navigation">
+          <nav>
+            <a href="services.html">Services</a>
+            <a href="#">Product</a>
+            <a href="#">Vision</a>
+            <a href="#">Features</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+          </nav>
+        </div>
+
 
         <div class="logo">
           <img src="img/logo.png" alt="Great Idea! Company logo.">
